# Image-Processor

./: CMakeLists.txt  README.md
cmake/: TestSolution.cmake
image_processor/: CMakeLists.txt  application.cpp  application.h  bmp.cpp  bmp.h  filter_producing_factory.cpp  filter_producing_factory.h  image.cpp  image.h  image_processor.cpp  parser.cpp  parser.h  pipeline.cpp  pipeline.h
image_processor/exceptions/: filter_producing_exception.cpp  filter_producing_exception.h  image_io_exception.cpp  image_io_exception.h  image_processor_exception.cpp  image_processor_exception.h  parser_exception.cpp  parser_exception.h
image_processor/filters/: cover_filter.cpp  cover_filter.h  crop_filter.cpp  crop_filter.h  edge_detection_filter.cpp  edge_detection_filter.h  filter.h  filter_descriptor.h  gaussian_blur_filter.cpp  gaussian_blur_filter.h  grayscale_filter.cpp  grayscale_filter.h  matrix_filter.cpp  matrix_filter.h  negative_filter.cpp  negative_filter.h  sharpening_filter.cpp  sharpening_filter.h
image_processor/tests/: CMakeLists.txt  test_bmp_read.cpp  test_bmp_write.cpp  test_crop.cpp  test_edge_detection.cpp  test_gray_scale.cpp  test_negative.cpp  test_parser.cpp  test_sharpening.cpp
